--- a/mobile/tobe2.html
+++ b/mobile/tobe2.html
@@ -46,6 +46,7 @@
     right: -79px;}
 
     .msg{display: none}
+    .msg.show_0{display: block}
     .msg.on{display:block}
     .msg.read .new{display:none}
 
@@ -62,15 +63,15 @@
     <p class="content question">
       <span class="new">1</span>
       <span class="time">오후 10:29</span>
-      팀장님~ 안녕하세요.~
-      <a href="#yes">예</a>
-      <a href="#no">아니오</a>
+      리브똑똑이 궁금하세요.~
+      <a href="#" title="예 안내로 이동" id="message_01">예</a>
+      <a href="#" title="아니오 안내로 이동"  id="message_02">아니오</a>
 
     </p>
 
 </div>
 <div class="sendbox msg show_1">
-  <p class="content">네~ 확인해볼게요^^</p>
+  <p class="content">네 궁금해요^^</p>
 </div>
 <div class="recievebox msg show_2">
   <p class="sendId">강</p>
@@ -78,11 +79,11 @@
   <p class="content">
     <span class="new">1</span>
     <span class="time">오후 10:29</span>
-    두번째보냄메세지두번째보냄메세지두번째보냄메세지두번째보냄메세지두번째보냄메세지두번째보냄메세지두번째보냄메세지</p>
-
+    제가 자세히 알려드릴께요</p>
 </div>
+
 <div class="sendbox msg show_3">
-  <p class="content">두번째 네~ 확인해볼게요^^</p>
+  <p class="content">아니요 궁금하지 않아요</p>
 </div>
 <div class="recievebox msg show_4">
   <p class="sendId">강</p>
@@ -90,40 +91,47 @@
   <p class="content">
     <span class="new">1</span>
     <span class="time">오후 10:29</span>
-  세번째 보냄메세지세번째 보냄메세지<세번째 보냄메세지<세번째 보냄메세지<세번째 보냄메세지<세번째 보냄메세지<세번째 보냄메세지
+  아.궁금하지 않군ㅇ.
   </p>
 
 </div>
-<div class="sendbox msg show_5">
-  <p class="content">세번째 네~ 확인해볼게요^^</p>
-</div>
-<div class="recievebox msg show_6">
-  <p class="sendId">강</p>
-  <p class="sendNic">강다솜 매니저님</p>
-  <p class="content">
-    <span class="new">1</span>
-    <span class="time">오후 10:29</span>
-    네번째 보냄메세지네번째 보냄메세지네번째 보냄메세지네번째 보냄메세지네번째 보냄메세지네번째 보냄메세지네번째 보냄메세지네번째 보냄메세지</p>
 
-</div>
-<div class="sendbox msg show_7">
-  <p class="content">네번째네~ 확인해볼게요^^</p>
-</div>
 <script>
 $( document ).ready(function() {
-        var timer = setInterval(outer(), 2000);
-        function outer() {
-          var count = 0;
-          var inner = function () {
-            var stopcount = $('.msg')-2;
-            if(count>stopcount){ clearInterval(timer); }
-            $('.show_'+count).addClass("on");
-            $("body").scrollTop(700);
-            $('.show_'+parseInt(count-1)).addClass("read");
-             ++count;
-          };
-          return inner;
-        }
+  console.log(2323);
+$('#message_01').click(function(e) {
+  e.preventDefault();
+  $('.msg.show_1').addClass("on");
+  $('.msg.show_2').addClass("on");
+  $('.msg.show_3').removeClass("on");
+  $('.msg.show_4').removeClass("on");
+});
+
+$('#message_02').click(function(e) {
+  e.preventDefault();
+  $('.msg.show_1').removeClass("on");
+  $('.msg.show_2').removeClass("on");
+  $('.msg.show_3').addClass("on");
+  $('.msg.show_4').addClass("on");
+});
+
+
+
+var timer = setInterval(outer("show"), 2000);
+function outer(target) {
+  var count = 0;
+
+  var inner = function () {
+    var stopcount = $('.msg')-2;
+    var _target = $('.'+target+ '_'+count);
+    if(count>stopcount){ clearInterval(timer); }
+    _target.addClass("on");
+    $("body").scrollTop(700);
+    $('.show_'+parseInt(count-1)).addClass("read");
+     ++count;
+  };
+  return inner;
+}
 
 });
 
