--- a/mobile/fontsizecheck.html
+++ b/mobile/fontsizecheck.html
@@ -18,7 +18,8 @@
     margin: 0;
     width: 79px;
     display: inline-block;}
-    .textWrap span{background-color: #444;color: #fff;font-size: 16px;vertical-align: middle; display: inline-block;}
+    .textWrap span{background-color: #444;color: #fff;font-size: 16px;padding: 0;
+    margin: 0; display: inline-block;}
 
     </style>
   </head>
